[gd_scene load_steps=15 format=4 uid="uid://c0wp14sc4n7bn"]

[ext_resource type="Script" uid="uid://bv05d3weu1ofw" path="res://src/scenes/level_8/level_8_contents.gd" id="1_bes42"]
[ext_resource type="Texture2D" uid="uid://mw7d0mehrdxf" path="res://assets/art/tiles/tiles,w8,h8.png" id="2_k88m3"]
[ext_resource type="PackedScene" uid="uid://dqe164qwwxqu6" path="res://src/entities/beehive/beehive.tscn" id="3_07dgp"]
[ext_resource type="PackedScene" uid="uid://bxyngcafnfaxx" path="res://src/entities/health_bar/boss_health_bar/boss_health_bar.tscn" id="4_jbdaw"]
[ext_resource type="Texture2D" uid="uid://sag4qhpae6kh" path="res://assets/art/misc/tile.png" id="5_3rtqk"]
[ext_resource type="PackedScene" uid="uid://c7yiwo1rgerjt" path="res://src/entities/exit/exit.tscn" id="6_t5tx3"]
[ext_resource type="PackedScene" uid="uid://dhbpnjlrxwjmq" path="res://src/entities/queen_bee/queen_bee.tscn" id="7_hxuis"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_egpny"]
texture = ExtResource("2_k88m3")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
5:1/0 = 0
4:1/0 = 0
3:1/0 = 0
2:1/0 = 0
1:1/0 = 0
0:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
5:3/0 = 0
4:3/0 = 0
3:3/0 = 0
2:3/0 = 0
1:3/0 = 0
0:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0

[sub_resource type="TileSet" id="TileSet_am86q"]
tile_size = Vector2i(8, 8)
sources/1 = SubResource("TileSetAtlasSource_egpny")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6k78o"]
size = Vector2(104.5, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_egpny"]
size = Vector2(16.5, 96.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s2xnm"]
size = Vector2(10.25, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_42okf"]
size = Vector2(10.25, 64)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_42okf"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(6, 12, 1)
direction = Vector3(-0.5, 0, 0)
initial_velocity_min = 9.0
initial_velocity_max = 50.0
gravity = Vector3(0, 98, 0)
scale_min = 0.29999998
scale_max = 0.59999996

[node name="Level8Contents" type="Node2D"]
script = ExtResource("1_bes42")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAEAAAALAAAAAQAEAAEAAAALAAEAAQACAAIAAAAAAAYAAQABAAIAAAAAAAcAAQADAAIAAAAAAAgAAQAEAAIAAAALAAYAAQACAAIAAAAAAAEAAQAAAAIAAAALAAIAAQABAAIAAAALAAUAAQADAAMAAAALAAoAAQADAAIAAAAAAAkAAQAEAAIAAAAAAAoAAQABAAIAAAAAAAIAAQABAAIAAAAAAAMAAQAEAAIAAAABAAoAAQABAAIAAAACAAoAAQABAAIAAAADAAoAAQAEAAMAAAAEAAoAAQAEAAMAAAAFAAoAAQAAAAIAAAAGAAoAAQACAAIAAAAHAAoAAQADAAIAAAAIAAoAAQAEAAMAAAAJAAoAAQABAAMAAAAKAAoAAQAEAAMAAAALAAsAAQAEAAQAAAAAAAsAAQAEAAQAAAABAAsAAQADAAQAAAACAAsAAQADAAAAAAAEAAsAAQACAAAAAAAKAAsAAQADAAAAAAAJAAsAAQABAAAAAAAIAAsAAQAEAAAAAAAHAAsAAQADAAAAAAAGAAsAAQABAAAAAAAFAAsAAQABAAAAAAACAAIAAQAAAAQAAAAHAAMAAQACAAAAAAACAAQAAQAEAAAAAAADAAQAAQAEAAAAAAADAAUAAQABAAAAAAAEAAUAAQAEAAAAAAAFAAUAAQAAAAAAAAAEAAYAAQACAAAAAAACAAYAAQAEAAAAAAAKAAQAAQAEAAAAAAAKAAUAAQAAAAAAAAAKAAYAAQAAAAAAAAAJAAYAAQABAAAAAAAJAAcAAQAEAAAAAAAIAAUAAQACAAAAAAAIAAkAAQACAAEAAAAEAAkAAQAEAAEAAAADAAkAAQACAAEAAAAFAAAAAQABAAIAAAAFAAEAAQAEAAIAAAAGAAEAAQABAAIAAAAGAAAAAQAEAAMAAAAFAAIAAQAAAAQAAAAGAAIAAQABAAQAAAAJAAAAAQAAAAMAAAAIAAAAAQACAAEAAAAIAAEAAQAAAAMAAAAJAAEAAQAEAAIAAAACAAEAAQADAAIAAAADAAEAAQADAAMAAAADAAAAAQAEAAIAAAAIAAIAAQAEAAQAAAAJAAIAAQACAAQAAAADAAIAAQADAAQAAAABAAEAAQADAAMAAAAEAAAAAQADAAMAAAAEAAEAAQAEAAMAAAAHAAAAAQACAAEAAAAHAAEAAQAEAAMAAAAKAAAAAQAEAAEAAAAKAAEAAQAAAAMAAAAAAAQAAQAAAAQAAAALAAMAAQAEAAQAAAAAAAUAAQAEAAEAAAALAAQAAQAAAAEAAAABAAAAAQACAAEAAAACAAAAAQAEAAEAAAAEAAIAAQAEAAAAAAAJAAUAAQABAAAAAAAIAAMAAQAEAAAAAAACAAMAAQAEAAAAAAAKAAMAAQAEAAAAAAAIAAYAAQAEAAAAAAADAAYAAQAEAAAAAAA=")
tile_set = SubResource("TileSet_am86q")
metadata/_edit_lock_ = true

[node name="BrickWallLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAALAAgAAQABAAIAAAALAAcAAQABAAIAAAALAAkAAQABAAIAAAA=")
tile_set = SubResource("TileSet_am86q")
metadata/_edit_lock_ = true

[node name="Beehives" type="Node2D" parent="."]

[node name="Beehive" parent="Beehives" instance=ExtResource("3_07dgp")]
position = Vector2(12, 20)
flip_h = true
is_idle = true

[node name="Beehive2" parent="Beehives" instance=ExtResource("3_07dgp")]
position = Vector2(28, 20)
flip_h = true
is_idle = true
animation_speed_scale = 0.9

[node name="Beehive3" parent="Beehives" instance=ExtResource("3_07dgp")]
position = Vector2(44, 20)
flip_h = true
is_idle = true
start_frame_index = 2

[node name="Beehive4" parent="Beehives" instance=ExtResource("3_07dgp")]
position = Vector2(63, 20)
flip_h = true
is_idle = true
animation_speed_scale = 1.2

[node name="Beehive5" parent="Beehives" instance=ExtResource("3_07dgp")]
position = Vector2(83, 20)
is_idle = true
start_frame_index = 2

[node name="StaticBody2D" type="StaticBody2D" parent="." groups=["platforms"]]
collision_layer = 4
collision_mask = 0
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(52.75, 86.5)
shape = SubResource("RectangleShape2D_6k78o")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 47.75)
shape = SubResource("RectangleShape2D_egpny")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(92.875, 31.5)
shape = SubResource("RectangleShape2D_s2xnm")

[node name="BrickWallHitbox" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(92.875, 60)
shape = SubResource("RectangleShape2D_42okf")

[node name="BossHealthBar" parent="." instance=ExtResource("4_jbdaw")]
position = Vector2(48, 92)

[node name="WallExplosionParticles" type="GPUParticles2D" parent="."]
position = Vector2(94, 68)
emitting = false
amount = 20
texture = ExtResource("5_3rtqk")
lifetime = 0.8
one_shot = true
speed_scale = 1.5
explosiveness = 0.3
randomness = 0.5
process_material = SubResource("ParticleProcessMaterial_42okf")

[node name="Exit" parent="." instance=ExtResource("6_t5tx3")]
position = Vector2(100, 64)
scale = Vector2(1, 4.8)

[node name="QueenBee" parent="." instance=ExtResource("7_hxuis")]
position = Vector2(81, 72)
flip_h = true
